--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,4 +13,8 @@
 @include nb-install() {
   @include nb-theme-global();
 };
+.label{
+  line-height: nb-theme(label-line-height) !important;
+}
+
 /* You can add global styles to this file, and also import other style files */
