--- a/src/themes.scss
+++ b/src/themes.scss
@@ -14,5 +14,6 @@ $nb-themes: nb-register-theme((
   // color-primary-700: #1a34b8,
   // color-primary-800: #102694,
   // color-primary-900: #091c7a,
+  label-line-height: 3rem
 
 ), default, default);
