--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -2,7 +2,7 @@
   <nb-layout-header fixed>
     <div class="d-flex w-100">
       <a nbButton ghost (click)="toggleSidebar()">
-        <nb-icon icon="menu-2-outline"></nb-icon>
+        <nb-icon icon="menu-2-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon>
       </a>
       <span class="ps-2 d-flex align-items-center">
         <img [src]="logo" alt="" height="40">
@@ -10,7 +10,7 @@
       <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
       <span class="ms-auto"></span>
       <span>
-        <button (click)="toggleTheme('default')" *ngIf="theme === 'default'; else dark" nbButton ghost status="primary"><nb-icon icon="sun-outline"></nb-icon></button>
+        <button (click)="toggleTheme('default')" *ngIf="theme === 'default'; else dark" nbButton ghost status="primary"><nb-icon icon="sun-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
       </span>
       <span class="ps-2">
         <nb-user [name]="profile?.screenName" title="Care Coordinator" [picture]="profile?.imageURL"></nb-user>
@@ -27,5 +27,5 @@
 </nb-layout>
 
 <ng-template #dark>
-  <button  (click)="toggleTheme('dark')"  nbButton ghost status="primary"><nb-icon icon="moon-outline"></nb-icon></button>
+  <button  (click)="toggleTheme('dark')"  nbButton ghost status="primary"><nb-icon icon="moon-outline" [options]="{ animation: { type: 'zoom' } }"></nb-icon></button>
 </ng-template>
