--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -4,7 +4,7 @@
             <div class="col-md-3">
                <h4> <nb-user [name]="patientName" [title]="patient?.email" [picture]="patient?.imageUrl"></nb-user></h4>
              </div>
-            <div class="col-md-3">
+            <div class="col-md-3" [ngSwitch]="patient?.gender">
                 <p><nb-icon icon="phone" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.phoneNumber}}</span></p>
                 <p><nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4"> {{patient?.dob}}</span></p>
                 <p *ngSwitchCase="0"> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Male</span></p>
