fix: Route changes

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -1,7 +1,7 @@
 <nb-card>
     <nb-card-body>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 cursor-pointer">
                <h4> <nb-user [name]="patientName" [title]="patient?.email" [picture]=""></nb-user></h4>
     </div>
             <div class="col-md-3" [ngSwitch]="patient?.gender">
