--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -5,11 +5,11 @@
                <h4> <nb-user [name]="patientName" [title]="patient?.email" [picture]="patient?.imageUrl"></nb-user></h4>
              </div>
             <div class="col-md-3" [ngSwitch]="patient?.gender">
-                <p><nb-icon icon="phone" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.phoneNumber}}</span></p>
+                <p><nb-icon icon="phone"></nb-icon><span class="ps-4">{{patient?.phoneNumber}}</span></p>
                 <p><nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span></p>
-                <p *ngSwitchCase="0"> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Male</span></p>
-                <p *ngSwitchCase="1"> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Female</span></p>
-                <p *ngSwitchCase="2"> <nb-icon icon="venus-mars" pack="font-awesome"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Others</span> </p>
+                <p *ngSwitchCase="0"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Male</span></p>
+                <p *ngSwitchCase="1"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Female</span></p>
+                <p *ngSwitchCase="2"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Others</span> </p>
             </div>
             <div class="col-md-6">
               <p class="text-uppercase"><nb-icon icon="map-marker-alt"></nb-icon> <span class="ps-4">{{patient?.city}}</span>,
