--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -2,11 +2,11 @@
     <nb-card-body>
         <div class="row">
             <div class="col-md-3">
-               <h4> <nb-user [name]="patientName" [title]="patient?.email" [picture]="patient?.imageUrl"></nb-user></h4>
+               <h4> <nb-user size="large" [name]="patientName" [title]="patient?.email" [picture]="patient?.imageUrl"></nb-user></h4>
              </div>
             <div class="col-md-3" [ngSwitch]="patient?.gender">
                 <p><nb-icon icon="phone"></nb-icon><span class="ps-4">{{patient?.phoneNumber}}</span></p>
-                <p><nb-icon icon="birthday-cake" pack="font-awesome"></nb-icon><span class="ps-4">{{patient?.dob}}</span></p>
+                <p><nb-icon icon="birthday-cake"></nb-icon><span class="ps-4">{{patient?.dob}}</span></p>
                 <p *ngSwitchCase="0"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Male</span></p>
                 <p *ngSwitchCase="1"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Female</span></p>
                 <p *ngSwitchCase="2"> <nb-icon icon="venus-mars"  nbTooltip="Gender" ></nb-icon><span class="ps-4">Others</span> </p>
