fix:add patient UI

--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -4,11 +4,11 @@
             <nb-form-field>
                 <div class="row">
                     <div class="col-sm-10 position-relative">
-                        <div class="position-absolute p-2">
+                        <!-- <div class="position-absolute p-2">
                             <nb-icon class="" status="success"  nbPrefix
                                 icon="search-outline"></nb-icon>                              
-                        </div>
-                        <input type="search" name="searchText" fullWidth="small" status="success" nbInput
+                        </div> -->
+                        <input type="search" name="searchText" fullWidth status="success" nbInput
                             [(ngModel)]="searchText" (ngModelChange)="getData()">
                     </div>
                     <div class="col-sm-2">
