--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -66,6 +66,14 @@
                                 </div>
                             </div>
                         </div>
+
+
+
+                    </div>
+                    <div>
+                        <h6 class="card-subtitle mb-3 mt-2 text-muted">Health</h6>
+                    </div>
+                    <div class="row">
                         <div class="col-md-6">
                             <div class="form-group mb-3">
                                 <label for="inputMorbidity" class="label"> <span class="danger"></span>
@@ -79,14 +87,10 @@
                                 </div>
                             </div>
                         </div>
-
-
-                    </div>
-                    <div class="row">
                         <div class="col-md-6">
                             <div class="form-group mb-3">
                                 <div class="row">
-                                    <div class="col-sm-2  mt-auto mb-auto mr-2">
+                                    <div class="col-sm-2  mt-auto mb-auto ">
                                         <label for="inputMoniter" class="label"> <span class="danger"></span>
                                             Monitor</label>
                                     </div>
