--- a/src/themes.scss
+++ b/src/themes.scss
@@ -38,7 +38,7 @@ $nb-themes: nb-register-theme((
   card-header-with-select-padding-bottom: 0.5rem,
 
   select-min-width: 6rem,
-
+  label-line-height: 3rem,
   slide-out-background: linear-gradient(270deg, #222b45 0%, #151a30 100%),
   slide-out-shadow-color: 0 4px 14px 0 #8f9bb3,
   slide-out-shadow-color-rtl: 0 4px 14px 0 #8f9bb3,
