fix: Added module

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -33,7 +33,7 @@
                                 <div for="inputFirstName" class="label"> <span class="text-danger">*</span> Date Of
                                     Birth</div>
                                 <input nbInput class="w-100" fieldSize="giant" formControlName="dob"
-                                    placeholder="Pick Date" [nbDatepicker]="formcontrol" [formControl]="formControl" fullWidth>
+                                    placeholder="Pick Date" [nbDatepicker]="formcontrol" fullWidth>
                                 <nb-datepicker #formcontrol></nb-datepicker>
                             </div>
                         </div>
