--- a/src/app/shared/components/clinic-prompt/clinic-prompt.component.html
+++ b/src/app/shared/components/clinic-prompt/clinic-prompt.component.html
@@ -9,6 +9,6 @@
     </nb-card-body>
     <nb-card-footer>
         <button nbButton status="primary"
-            class="appearance-filled size-medium shape-rectangle status-primary" (click)="click($event)">Proceed</button>
+            class="appearance-filled size-medium shape-rectangle status-primary" (click)="click()">Proceed</button>
     </nb-card-footer>
 </nb-card>
