--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -29,7 +29,7 @@
                 </div>
         </nb-list-item>
         <nb-list-item class="form-control border shadow-none" *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
-            <nb-user class="warning" class="cursor-pointer" [name]="user.name" [title]="user.email" [picture]="user.imageUrl">
+            <nb-user class="cursor-pointer warning" [name]="user.name" [title]="user.email" [picture]="user.imageUrl">
             </nb-user>
         </nb-list-item>
         <nb-list-item *ngIf="!users?.length">
