--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,34 +1,37 @@
-<nb-card size="giant" style="overflow: auto">
-    <nb-card-header status="primary">
+<nb-card size="giant" style="overflow: auto"status="primary">
+    <nb-card-header>
         <div class="row">
             <div class="col-10">
                 Care Team
             </div>
             <div class="col-1 p-0">
-                <button nbButton size="small" (click)="open(dialog)">
+                <button nbButton ghost size="gaint" (click)="open(dialog)">
                     <nb-icon icon="plus"></nb-icon>
                 </button>
             </div>
             <div class="col-1 p-0">
-                <button *ngIf="!showDone" nbButton hero status="primary" size="small" (click)="change()">EDIT</button>
-                <button *ngIf="showDone" nbButton hero status="primary" size="small" (click)="change()">Done</button>
+                <button *ngIf="!showDone" nbButton size="small" (click)="change()">EDIT</button>
+                <button *ngIf="showDone" nbButton  size="small" (click)="change()">Done</button>
             </div>
         </div>
     </nb-card-header>
     <nb-card-body>
-        No caregivers specified. Tap + to add a caregiver
+        <p> No caregivers specified. Tap + to add a caregiver</p>
     </nb-card-body>
 </nb-card>
 <ng-template #dialog>
     <nb-card>
-        <nb-card-header>Invite caregiver</nb-card-header>
+        <nb-card-header>
+            <h6>Invite caregiver</h6>
+        </nb-card-header>
         <nb-card-body>
-            <input nbInput="" placeholder="Caregiver Username"
-                class="size-medium status-basic shape-rectangle nb-transition" [(ngModel)]="careGiver" name="careGiver">
-            </nb-card-body>
-        <nb-card-footer class="example-items-rows">
-            <button nbButton class="appearance-filled size-medium shape-rectangle" (click)="refclose()">Cancel</button>
-            <button nbButton class="appearance-filled size-medium shape-rectangle" (click)="notify()">Ok</button>
+            <input type="text" nbInput placeholder="Caregiver Username" [(ngModel)]="careGiver" name="careGiver">
+        </nb-card-body>
+        <nb-card-footer>
+            <button nbButton class="appearance-filled size-small shape-rectangle status-danger"
+                (click)="refclose()">Cancel</button>
+            <button nbButton class="appearance-filled size-small shape-rectangle status-primary"
+                (click)="notify()">OK</button>
         </nb-card-footer>
     </nb-card>
 </ng-template>
