--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -1,4 +1,4 @@
-<nb-card size="giant" style="overflow: auto"status="primary">
+<nb-card size="giant" style="overflow: auto" status="primary">
     <nb-card-header>
         <div class="row">
             <div class="col-10">
@@ -6,16 +6,16 @@
             </div>
             <div class="col-1 p-0">
                 <button nbButton ghost size="gaint" (click)="open(dialog)">
-                    <nb-icon icon="plus"></nb-icon>
+                    <nb-icon icon="plus" class="text-white"></nb-icon>
                 </button>
             </div>
             <div class="col-1 p-0">
-                <button *ngIf="!showDone" nbButton size="small" (click)="change()">EDIT</button>
-                <button *ngIf="showDone" nbButton  size="small" (click)="change()">Done</button>
+                <button *ngIf="!showDone" nbButton ghost  size="large" (click)="change()" class="p-0 text-white">EDIT</button>
+                <button *ngIf="showDone" nbButton ghost size="large" (click)="change()" class="p-0 text-white">Done</button>
             </div>
         </div>
     </nb-card-header>
-    <nb-card-body>
+    <nb-card-body>  
         <p> No caregivers specified. Tap + to add a caregiver</p>
     </nb-card-body>
 </nb-card>
@@ -28,7 +28,7 @@
             <input type="text" nbInput placeholder="Caregiver Username" [(ngModel)]="careGiver" name="careGiver">
         </nb-card-body>
         <nb-card-footer>
-            <button nbButton class="appearance-filled size-small shape-rectangle status-danger"
+            <button nbButton status="danger"
                 (click)="refclose()">Cancel</button>
             <button nbButton class="appearance-filled size-small shape-rectangle status-primary"
                 (click)="notify()">OK</button>
