fix: Made notification center

--- a/src/app/pages/patients/care-team/care-team.component.html
+++ b/src/app/pages/patients/care-team/care-team.component.html
@@ -16,7 +16,13 @@
         </div>
     </nb-card-header>
     <nb-card-body>  
-        <p> No caregivers specified. Tap + to add a caregiver</p>
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 m-4">
+                <h6 class="text-center">No caregivers specified. Tap + to add a caregiver</h6>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
     </nb-card-body>
 </nb-card>
 <ng-template #dialog>
