fix: UI changes

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,5 +1,7 @@
-<div class="d-flex align-items-center h-75 justify-content-center">
-    <nb-card class="w-75" [nbSpinner]="isLoading">
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <div class="d-flex align-items-center h-75 justify-content-center" style="margin-top: 12rem;">
+    <nb-card class="w-75 mb-0" [nbSpinner]="isLoading">
         <nb-card-header >
             <div class="d-flex align-items-center h-100 justify-content-center">
                 <span class="ps-2">
@@ -8,18 +10,29 @@
                 <span class="ps-2 h4 text-uppercase d-flex align-items-center">{{ title }}</span>
             </div>
         </nb-card-header>
-        <nb-card-body>
+        <nb-card-body class="m-2">
             <form (ngSubmit)="submit()">
                 <div class="mb-3 form-group">
-                    <label for="email" class="form-label">Email</label>
+                    <label for="email" class="label">Email</label>
                     <nb-form-field>
                         <nb-icon nbPrefix icon="email-outline"></nb-icon>
                         <input type="text" class="form-control" nbInput fullWidth shape="rectangle" placeholder="Enter your email"  name="email" [(ngModel)]="email">
                     </nb-form-field>
                 </div>
-                <button nbButton hero status="primary" type="submit" [disabled]="!email">Send</button>
-                <a class="float-end pt-2"  [routerLink]="['../login']">Login</a>
+                <div class="row mb-3">
+                    <div class = "col-10"></div>
+                    <div class = "col-2">
+                <a class="float-end"[routerLink]="['../login']">Login</a>
+                </div>
+                </div>
+                <div class="row mb-3">
+                    <div class = "col-12">
+                <button class="w-100" nbButton hero status="primary" type="submit" [disabled]="!email">Send</button>
+            </div>
+        </div>
             </form>
         </nb-card-body>
     </nb-card>
+</div>
+</div>
 </div>
