--- a/src/app/auth/index/index.component.html
+++ b/src/app/auth/index/index.component.html
@@ -1,7 +1,7 @@
 <nb-layout>
-    <nb-layout-column class="colored-column-basic">
-      <router-outlet></router-outlet>
-    </nb-layout-column>
-    <nb-layout-column class="colored-column-warning bg-image img-fluid" [ngStyle]="{'background-image': 'url(' + imageURL + ')' }">
-    </nb-layout-column>
+  <nb-layout-column class="colored-column-basic">
+        <router-outlet></router-outlet>
+  </nb-layout-column>
+  <!-- <nb-layout-column class="colored-column-warning bg-image img-fluid" [ngStyle]="{'background-image': 'url(' + imageURL + ')' }">
+    </nb-layout-column> -->
 </nb-layout>
