add: Morbidity field in profile select

--- a/src/app/pages/patients/profile/profile.component.html
+++ b/src/app/pages/patients/profile/profile.component.html
@@ -16,6 +16,7 @@
                 <span class="ps-1">{{patient?.state}}</span>,
                 <span class="ps-1">{{patient?.country}}</span>
             </p> 
+            <p><nb-icon icon="person" nbTooltip="Morbidity"></nb-icon><span class="ps-4" *ngFor="let morbidity of morbidityValue" >{{morbidity}}</span></p> 
             </div>
         </div>
     </nb-card-body>
