add: patient list class based on monitor

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,4 +44,12 @@
 		}
 	}
 }
+.nb-theme-default {
+	nb-user.none {
+		.user-picture {
+			border-color: #dee2e6 !important;
+			border-width: 3px !important;
+		}
+	}
+}
 /* end Patients status */
