--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -1,5 +1,11 @@
 <nb-card size="large" [nbSpinner]="isLoading">
     <nb-list>
+        <nb-list-item class="justify-content-center">
+            <nb-actions size="small">
+                <nb-action icon="funnel-outline"></nb-action>
+                <nb-action icon="plus-circle-outline"></nb-action>
+              </nb-actions>
+        </nb-list-item>
         <nb-list-item>
                 <div class="row w-100">
                     <div class="col-sm-10">
