change: cursor pointer

--- a/src/app/pages/patients/list/list.component.html
+++ b/src/app/pages/patients/list/list.component.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
         </nb-list-item>
-        <nb-list-item *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
+        <nb-list-item class="cursor-pointer" *ngFor="let user of users" [routerLink]="[user?.patientID, 'vitals']">
             <nb-user class="cursor-pointer warning" [ngClass]="{'none': user.monitored == 0,'success': user.alarm == 0 && user.monitored == 1, 'warning': user.alarm == 1 && user.monitored == 1, 'danger': user.alarm == 2 && user.monitored == 1}" [name]="user.name" [title]="user.dob" [picture]="user.imageUrl">
             </nb-user>
         </nb-list-item>
